--- a/AgeEstimationSelfCheckout/Pages/Index.cshtml
+++ b/AgeEstimationSelfCheckout/Pages/Index.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="row h-100">
+    <div class="col-5">
+    </div>
+    <div class="col-7">
+    </div>
 </div>
