--- a/AgeEstimationSelfCheckout/Pages/Index.cshtml
+++ b/AgeEstimationSelfCheckout/Pages/Index.cshtml
@@ -5,8 +5,21 @@
 }
 
 <div class="row h-100">
-    <div class="col-5">
+    <div class="col-5" style="align-content: center;">
+        <div class="card" style="height: 90%; align-content: center;">
+            <div class="row" style="margin-top: 50%;">
+                <div class="col-10 offset-1 text-center">
+                    <h1>Begin met scannen</h1>
+                    <button class="btn btn-primary w-100">Start</button>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-7">
+    <div class="col-7" style="align-content: end;">
+        <div class="no-card" style="float: right;">
+            <div class="card text-center mb-4" style="width: 80px; height: 60px;">
+                <p>NL</p>
+            </div>
+        </div>
     </div>
 </div>
