--- a/AgeEstimationSelfCheckout/wwwroot/css/site.css
+++ b/AgeEstimationSelfCheckout/wwwroot/css/site.css
@@ -18,6 +18,14 @@ html {
 }
 
 body {
-    height: calc(100vh - 60px);
-    margin-bottom: 60px;
+    height: 100vh;
+    background: linear-gradient( to bottom, dodgerblue 85%, lightblue 85%, lightblue 88%, white 88%, white 100% );
+}
+
+.card{
+    background-color: white;
+}
+
+.no-card{
+    background-color: transparent;
 }
