--- a/AgeEstimationSelfCheckout/Pages/Index.cshtml
+++ b/AgeEstimationSelfCheckout/Pages/Index.cshtml
@@ -10,7 +10,7 @@
             <div class="row" style="margin-top: 50%;">
                 <div class="col-10 offset-1 text-center">
                     <h1>Begin met scannen</h1>
-                    <button class="btn btn-primary w-100">Start</button>
+                    <a class="btn btn-primary w-100" asp-area="" asp-page="/Scan">Start</a>
                 </div>
             </div>
         </div>
