--- a/AgeEstimationSelfCheckout/Pages/Employee.cshtml
+++ b/AgeEstimationSelfCheckout/Pages/Employee.cshtml
@@ -27,6 +27,7 @@
                 <div style="height: 85%;">
                     <div class="h-100 text-center" style="background-color: orange;">
                         <h1>Error: Geen schatting mogelijk</h1>
+                        <button class="btn btn-primary ms-3" onclick="showPopup('Er is geen goede schatting kunnen maken, let extra goed op!')">I</button>
                         <div class="pic">
                         </div>
                     </div>
@@ -40,6 +41,7 @@
                 <div style="height: 85%;">
                     <div class="h-100 text-center" style="background-color: green;">
                         <h1>Schatting: 25+</h1>
+                        <button class="btn btn-primary ms-3" onclick="showPopup('Deze klant is geschat boven de 25.')">I</button>
                         <div class="pic">
                         </div>
                     </div>
@@ -53,6 +55,7 @@
                 <div style="height: 85%;">
                     <div class="h-100 text-center" style="background-color: red;">
                         <h1>Schatting: 25-</h1>
+                        <button class="btn btn-primary ms-3" onclick="showPopup('Deze klant is geschat onder de 25, let extra goed op!')">I</button>
                         <div class="pic">
                         </div>
                     </div>
@@ -64,7 +67,7 @@
         }
         else
         {
-            
+
         }
     </div>
 </div>
