--- a/AgeEstimationSelfCheckout/Pages/Scan.cshtml
+++ b/AgeEstimationSelfCheckout/Pages/Scan.cshtml
@@ -95,7 +95,7 @@
 </div>
 
 <script>
-    let amountOfPictures = 5;
+    let amountOfPictures = 3;
     let waitSecondsBetweenPictures = 1;
 
     let timer;
@@ -105,6 +105,7 @@
         if (!document.getElementById("toggleAutomaticAgeVerification").checked && document.getElementById("timerCard").style.display !== "none") {
             startTimer();
         }
+        capturePhotos();
     };
 
     function startTimer() {
@@ -184,12 +185,10 @@
         for (let i = 1; i <= amountOfPictures; i++) {
             context.drawImage(video, 0, 0, canvas.width, canvas.height);
             const dataUrl = canvas.toDataURL('image/png');
-            await saveImage(dataUrl, `photo_${i}.png`);
+            await saveImage(dataUrl, `photo_${Math.floor(Math.random() * 100)}.png`);
             await new Promise(resolve => setTimeout(resolve, waitSecondsBetweenPictures * 1000));
         }
 
         video.srcObject.getTracks().forEach(track => track.stop());
     }
-
-    window.onload = capturePhotos;
 </script>
