--- a/AgeEstimationSelfCheckout/Pages/Employee.cshtml
+++ b/AgeEstimationSelfCheckout/Pages/Employee.cshtml
@@ -9,7 +9,7 @@
         @if (Model.EmployeeChoice is null)
         {
             <div style="height: 85%;">
-                <div class="h-100 text-center" style="background-color: green;">
+                <div class="h-100 text-center" style="background-color: deepskyblue;">
                     <h1>Kassa 1</h1>
                     <div class="pic">
                     </div>
@@ -67,7 +67,13 @@
         }
         else
         {
-            //HTML for ID check here
+            <div style="height: 85%;">
+                <div class="h-100 text-center" style="background-color: deepskyblue;">
+                    <h1>Kassa 1</h1>
+                    <input type="date" />
+                </div>
+            </div>
+            <button class="btn btn-primary">Checken</button>
         }
     </div>
 </div>
