--- a/AgeEstimationSelfCheckout/Pages/Scan.cshtml
+++ b/AgeEstimationSelfCheckout/Pages/Scan.cshtml
@@ -78,10 +78,13 @@
             </div>
             <div class="row pb-5">
                 <div class="col-8 p-3">
-                    <form method="post" asp-page="/Payment">
+@*                     <form method="post" asp-page="/Payment">
                         <input type="hidden" asp-for="@TotalPrice" />
                         <input type="hidden" asp-for="@ScannedAlcohol" />
                         <input type="hidden" asp-for="@ScanModel.AutomaticAgeVerification" />
+                        <button type="submit" class="btn btn-primary w-100">Afrekenen</button>
+                    </form> *@
+                    <form method="post" asp-page-handler="ToEmployee">
                         <button type="submit" class="btn btn-primary w-100">Afrekenen</button>
                     </form>
                 </div>
@@ -98,7 +101,7 @@
 <input type="hidden" id="Countdown" value="@ScanModel.Countdown" />
 
 <script>
-    let amountOfPictures = 3;
+    let amountOfPictures = 5;
     let waitSecondsBetweenPictures = 1;
 
     let timer;
