fix error possibility

--- a/AgeEstimationSelfCheckout/Pages/Employee.cshtml
+++ b/AgeEstimationSelfCheckout/Pages/Employee.cshtml
@@ -22,23 +22,7 @@
         }
         else if (Model.EmployeeChoice == true)
         {
-            if (!EmployeeModel.Data.AutomaticAgeVerification)
-            {
-                <div style="height: 85%;">
-                    <div class="h-100 text-center" style="background-color: orange;">
-                        <h1>Error: Geen schatting mogelijk</h1>
-                        <p>Klant heeft gekozen voor geen automatishe leeftijdscontrole</p>
-                        <button class="btn btn-primary ms-3" onclick="showPopup('Er is geen goede schatting kunnen maken, let extra goed op!')">I</button>
-                        <div class="pic">
-                            <img src="~/images/zebra.png" />
-                        </div>
-                    </div>
-                </div>
-                <input type="number" id="orange1_number" placeholder="Code" />
-                <p>Code: 1234</p>
-                <button class="btn btn-primary" onclick="checkCode('orange1_number')">Afronden</button>
-            }
-            else if (EmployeeModel.Data.error != 0)
+            if (EmployeeModel.Data.error != 0)
             {
                 <div style="height: 85%;">
                     <div class="h-100 text-center" style="background-color: orange;">
@@ -53,6 +37,22 @@
                 <input type="number" id="orange2_number" placeholder="Code" />
                 <p>Code: 1234</p>
                 <button class="btn btn-primary" onclick="checkCode('orange2_number')">Afronden</button>
+            }
+            else if (!EmployeeModel.Data.AutomaticAgeVerification)
+            {
+                <div style="height: 85%;">
+                    <div class="h-100 text-center" style="background-color: orange;">
+                        <h1>Error: Geen schatting mogelijk</h1>
+                        <p>Klant heeft gekozen voor geen automatishe leeftijdscontrole</p>
+                        <button class="btn btn-primary ms-3" onclick="showPopup('Er is geen goede schatting kunnen maken, let extra goed op!')">I</button>
+                        <div class="pic">
+                            <img src="~/images/zebra.png" />
+                        </div>
+                    </div>
+                </div>
+                <input type="number" id="orange1_number" placeholder="Code" />
+                <p>Code: 1234</p>
+                <button class="btn btn-primary" onclick="checkCode('orange1_number')">Afronden</button>
             }
             else if (EmployeeModel.Data.over_25)
             {
